pylabs_env/k8s/deployment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment
  template:
    metadata:
      labels:
        app: deployment
    spec:
      containers:
      - name: deployment
        image: deployment-service:latest
        ports:
        - containerPort: 500t
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
