pylabs_env/k8s/role-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: role-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: role
  template:
    metadata:
      labels:
        app: role
    spec:
      containers:
      - name: role
        image: role-service:latest
        ports:
        - containerPort: 500e
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
