pylabs_env/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pylabs-ingress
spec:
  rules:
  - host: pylabs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /ai
        pathType: Prefix
        backend:
          service:
            name: ai-service
            port:
              number: 80
      - path: /logger
        pathType: Prefix
        backend:
          service:
            name: logger-service
            port:
              number: 80
      - path: /analytics
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 80
